WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
306175
Address unsafe cast warning in NodeRareData.h
https://bugs.webkit.org/show_bug.cgi?id=306175
Summary
Address unsafe cast warning in NodeRareData.h
Chris Dumez
Reported
2026-01-24 04:20:39 PST
Address unsafe cast warning in NodeRareData.h.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2026-01-24 04:21:55 PST
Pull request:
https://github.com/WebKit/WebKit/pull/57173
EWS
Comment 2
2026-01-27 00:59:44 PST
Committed
306267@main
(60fbe5d0016f): <
https://commits.webkit.org/306267@main
> Reviewed commits have been landed. Closing PR #57173 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-01-27 01:00:17 PST
<
rdar://problem/168986338
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug