Address unsafe cast warning in NodeRareData.h https://bugs.webkit.org/show_bug.cgi?id=306175

Reviewed by Ryosuke Niwa.

This tested as performance neutral on Speedometer and MotionMark.

* Source/WebCore/SaferCPPExpectations/MemoryUnsafeCastCheckerExpectations:
* Source/WebCore/dom/AllDescendantsCollection.h:
* Source/WebCore/dom/ClassCollection.h:
* Source/WebCore/dom/ContainerNode.cpp:
(WebCore::ContainerNode::getElementsByTagName):
(WebCore::ContainerNode::getElementsByClassName):
(WebCore::ContainerNode::children):
* Source/WebCore/dom/Document.cpp:
(WebCore::Document::ensureCachedCollection):
(WebCore::Document::applets):
(WebCore::Document::all):
(WebCore::Document::allFilteredByName):
(WebCore::Document::windowNamedItems):
(WebCore::Document::documentNamedItems):
* Source/WebCore/dom/LiveNodeList.cpp:
(WebCore::LiveNodeList::LiveNodeList):
* Source/WebCore/dom/LiveNodeList.h:
(WebCore::LiveNodeList::type const):
* Source/WebCore/dom/LiveNodeListInlines.h:
(WebCore::traversalType>::CachedLiveNodeList):
* Source/WebCore/dom/NameNodeList.cpp:
(WebCore::NameNodeList::NameNodeList):
* Source/WebCore/dom/NameNodeList.h:
* Source/WebCore/dom/NodeRareData.h:
(WebCore::NodeListsNodeData::addCacheWithAtomName):
(WebCore::NodeListsNodeData::addCachedCollection):
(WebCore::NodeListsNodeData::cachedCollection):
* Source/WebCore/dom/TagCollection.h:
* Source/WebCore/html/CachedHTMLCollection.h:
(WebCore::CachedHTMLCollection<HTMLCollectionClass>::CachedHTMLCollection):
(WebCore::CachedHTMLCollection<HTMLCollectionClass>::elementMatches const):
(WebCore::traversalType>::CachedHTMLCollection): Deleted.
(WebCore::traversalType>::elementMatches const): Deleted.
* Source/WebCore/html/CachedHTMLCollectionInlines.h:
(WebCore::CachedHTMLCollection<HTMLCollectionClass>::~CachedHTMLCollection):
(WebCore::CachedHTMLCollection<HTMLCollectionClass>::length const):
(WebCore::CachedHTMLCollection<HTMLCollectionClass>::item const):
(WebCore::CachedHTMLCollection<HTMLCollectionClass>::memoryCost const):
(WebCore::CachedHTMLCollection<HTMLCollectionClass>::invalidateCacheForDocument):
(WebCore::CachedHTMLCollection<HTMLCollectionClass>::namedItem const):
(WebCore::CachedHTMLCollection<HTMLCollectionClass>::collectionBegin const):
(WebCore::CachedHTMLCollection<HTMLCollectionClass>::collectionLast const):
(WebCore::CachedHTMLCollection<HTMLCollectionClass>::collectionTraverseForward const):
(WebCore::CachedHTMLCollection<HTMLCollectionClass>::collectionTraverseBackward const):
(WebCore::CachedHTMLCollection<HTMLCollectionClass>::collectionCanTraverseBackward const):
(WebCore::traversalType>::~CachedHTMLCollection): Deleted.
(WebCore::traversalType>::length const): Deleted.
(WebCore::traversalType>::item const): Deleted.
(WebCore::traversalType>::memoryCost const): Deleted.
(WebCore::traversalType>::invalidateCacheForDocument): Deleted.
(WebCore::traversalType>::namedItem const): Deleted.
(WebCore::traversalType>::collectionBegin const): Deleted.
(WebCore::traversalType>::collectionLast const): Deleted.
(WebCore::traversalType>::collectionTraverseForward const): Deleted.
(WebCore::traversalType>::collectionTraverseBackward const): Deleted.
(WebCore::traversalType>::collectionCanTraverseBackward const): Deleted.
* Source/WebCore/html/CollectionType.h:
* Source/WebCore/html/EmptyHTMLCollection.h:
* Source/WebCore/html/GenericCachedHTMLCollection.cpp:
(WebCore::GenericCachedHTMLCollection<type>::GenericCachedHTMLCollection):
(WebCore::GenericCachedHTMLCollection<type>::elementMatches const):
(WebCore::GenericCachedHTMLCollection<traversalType>::GenericCachedHTMLCollection): Deleted.
(WebCore::GenericCachedHTMLCollection<traversalType>::elementMatches const): Deleted.
* Source/WebCore/html/GenericCachedHTMLCollection.h:
* Source/WebCore/html/HTMLAllCollection.h:
* Source/WebCore/html/HTMLCollection.h:
* Source/WebCore/html/HTMLDataListElement.cpp:
(WebCore::HTMLDataListElement::options):
* Source/WebCore/html/HTMLFieldSetElement.cpp:
(WebCore::HTMLFieldSetElement::elements):
* Source/WebCore/html/HTMLFormControlsCollection.h:
* Source/WebCore/html/HTMLFormElement.cpp:
(WebCore::HTMLFormElement::elements):
* Source/WebCore/html/HTMLMapElement.cpp:
(WebCore::HTMLMapElement::areas):
* Source/WebCore/html/HTMLNameCollection.cpp:
* Source/WebCore/html/HTMLNameCollection.h:
(WebCore::HTMLNameCollection<HTMLCollectionClass>::HTMLNameCollection):
(WebCore::traversalType>::HTMLNameCollection): Deleted.
* Source/WebCore/html/HTMLNameCollectionInlines.h:
(WebCore::HTMLNameCollection<HTMLCollectionClass>::~HTMLNameCollection):
(WebCore::traversalType>::~HTMLNameCollection): Deleted.
* Source/WebCore/html/HTMLOptionsCollection.h:
* Source/WebCore/html/HTMLSelectElement.cpp:
(WebCore::HTMLSelectElement::selectedOptions):
(WebCore::HTMLSelectElement::options):
* Source/WebCore/html/HTMLTableElement.cpp:
(WebCore::HTMLTableElement::rows):
(WebCore::HTMLTableElement::tBodies):
* Source/WebCore/html/HTMLTableRowElement.cpp:
(WebCore::HTMLTableRowElement::cells):
* Source/WebCore/html/HTMLTableRowsCollection.h:
* Source/WebCore/html/HTMLTableSectionElement.cpp:
(WebCore::HTMLTableSectionElement::rows):
* Source/WebCore/html/LabelsNodeList.cpp:
(WebCore::LabelsNodeList::LabelsNodeList):
* Source/WebCore/html/LabelsNodeList.h:
* Source/WebCore/html/RadioNodeList.cpp:
(WebCore::RadioNodeList::RadioNodeList):
* Source/WebCore/html/RadioNodeList.h:

Canonical link: https://commits.webkit.org/306267@main